--- a/META.yml
+++ b/META.yml
@@ -15,7 +15,9 @@ name: XML-MinWriter
 provides:
   XML::MinWriter:
     file: lib/XML/MinWriter.pm
-    version: 0.03
+    version: 0.04
+requires:
+  XML::Writer: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.03
+version: 0.04
