--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,24 @@
 ---
-abstract: 'Perl extension for writing XML'
+abstract: 'Perl extension for writing XML in PYX format.'
 author:
-  - unknown
-build_requires: {}
+  - 'Klaus Eichner <klaus03@gmail.com>'
+build_requires:
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  Module::Build: 0.3
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120630'
-license: perl
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.141170'
+license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: XML-MinWriter
-provides:
-  XML::MinWriter:
-    file: lib/XML/MinWriter.pm
-    version: 0.06
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-  XML::Writer: 0
+  XML::Writer: '0'
 resources:
-  license: http://dev.perl.org/licenses/
-version: 0.06
+  repository: https://github.com/klaus03/XML-MinWriter.git
+version: '0.07'
